<resources>
    <string name="app_name">AlarTest</string>

    <string name="prompt_username">User Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_status">Please, check username and password!</string>
    <string name="wrong_data">Wrong Data…</string>

    <string name="id">Id: </string>
    <string name="name">Name: </string>
    <string name="country">Country: </string>
    <string name="lat">Latitude: </string>
    <string name="lon">Longitude: </string>
    <string name="title_activity_maps">Map</string>

    <string name="log_in">Log In</string>
    <string name="data_list">Data List</string>
    <string name="detail">Detail</string>

</resources>
